<resources>
    <string name="app_name">myClothesStock</string>
    <string name="title_activity_main">Main</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Basics -->

    <string name="text_confirm">Confirmar</string>
    <string name="text_cancel">Cancelar</string>
    <string name="text_edit">Editar</string>
    <string name="text_close">Fechar</string>
    <string name="text_remove">Remover</string>

    <string name="btn_calcular">Calcular</string>

    <string name="error_conversao_valores">Erro de conversão de valores!</string>
    <string name="error_preecha_todos_valores">Preencha todos os campos!</string>
    <string name="error_falha_registro">Erro de registro!</string>

    <string name="info_item_excluido">Item excluido com sucesso!</string>

    <!-- Tela principal -->

    <!-- Barra de menu lateral -->

    <string name="main_drawer_iniVenda">Iniciar venda</string>
    <string name="main_drawer_gerPagamento">Pagamentos</string>


    <string name="main_drawer_title_gerenciamento">Gerenciamento</string>

    <string name="main_drawer_gerenciamento_addCliente">Adicionar cliente</string>
    <string name="main_drawer_gerenciamento_addProduto">Adicionar produto</string>
    <string name="main_drawer_gerenciamento_trocaProduto">Troca de produto</string>


    <string name="main_drawer_title_relatorio">Relatórios</string>

    <string name="main_drawer_relatorio_cliente">Relatório de clientes</string>
    <string name="main_drawer_relatorio_produto">Relatório de produtos</string>
    <string name="main_drawer_relatorio_venda">Relatório de vendas</string>
    <string name="main_drawer_relatorio_pagamentos">Relatório de pagamentos</string>


    <!-- CadProduto -->

    <string name="title_activity_cad_produto">Cadastro de produtos</string>

    <string name="cadProduto_editText_hint_referencia">Referência</string>
    <string name="cadProduto_editText_hint_marca">Marca</string>
    <string name="cadProduto_editText_hint_descricao">Descrição</string>
    <string name="cadProduto_editText_hint_precoCusto">Preço de custo</string>
    <string name="cadProduto_editText_hint_precoVenda">Preço de venda</string>
    <string name="cadProduto_btn_text_gerar">Gerar</string>
    <string name="cadProduto_btn_text_grade">Grade</string>
    <string name="cadProduto_textView_totalItens">Total de itens:</string>
    <string name="cadProduto_btn_text_concluir">Adicionar</string>

    <string name="cadProduto_error_null_abrirGerador">Preencha primeiramente o campo Preço de custo!</string>

    <string name="cadProduto_alert_gerador_title">Gerar preço de venda</string>
    <string name="cadProduto_alert_gerador_radioOpValor">Valor</string>
    <string name="cadProduto_alert_gerador_radioOpPorcent">Porcentagem</string>

    <!-- InsertGrade -->

    <string name="title_activity_insert_grade">Definir grade</string>
    <string name="insertGrade_editText_hint_tamanho">Tamanho</string>
    <string name="insertGrade_editText_hint_quantidade">Quantidade</string>
    <string name="insertGrade_btn_text_incluir">Incluir</string>
    <string name="insertGrade_textView_pressRemove">Mantenha pressionado para remover um item.</string>
    <string name="insertGrade_error_listaVazia">Nenhum item em grade!</string>

    <!--CadCliente-->

    <string name="title_activity_cad_cliente">Cadastro de cliente</string>
    <string name="cadCliente_editText_hint_nome">Nome</string>
    <string name="cadCliente_editText_hint_cpf">CPF</string>
    <string name="cadCliente_editText_hint_data">Data de nascimento</string>
    <string name="cadCliente_editText_hint_telefone">Telefone</string>
    <string name="cadCliente_editText_hint_email">E-mail</string>
    <string name="cadCliente_btn_text_concluir">Adicionar</string>
    <string name="cadCliente_textView_numerosApenas">Apenas números</string>
    <string name="cadCliente_textView_exemploData">Exemplo: 00/00/0000</string>

    <string name="cadCliente_error_preencherRequisitados">Preencha ao menos os capos: Nome, CPF e Telefone.</string>
    <string name="cadCliente_error_invalidCPF">CPF inválido!</string>
    <string name="cadCliente_error_invalidDateFormat">Formato de data inválido!</string>

    <!-- ActivityVenda -->

    <string name="title_activity_venda">Venda</string>

    <string name="venda_cliente_textView_title_nome">Nome:</string>
    <string name="venda_cliente_textView_title_cpf">CPF:</string>
    <string name="venda_cliente_editText_hint_buscar">Buscar</string>

    <string name="venda_produto_btn_text">Adicionar</string>
    <string name="venda_produto_textView_total">Total:</string>

    <string name="venda_produto_selectProduto_editText_hint_buscar">Buscar</string>

    <string name="venda_produto_selectGrade_error_jaInserido">Este item já foi inserido!</string>

    <string name="venda_produto_define_atributs_textView_preco">Preço:</string>
    <string name="venda_produto_define_atributs_textView_maxValue">Valor máximo:</string>
    <string name="venda_produto_define_atributs_textView_titleGeradorDesconto">Gerador de descontos</string>
    <string name="venda_produto_define_atributs_editText_hint_valor">Valor</string>
    <string name="venda_produto_define_atributs_textView_precoReal">Preço + Desconto:</string>
    <string name="venda_produto_define_atributs_alert_error_preencherQuantidade">Preencha o campo de texto Quantidade!</string>
    <string name="venda_produto_define_atributs_alert_error_quantidadeIndisponivel">Quantidade indisponível em estoque!</string>

    <string name="venda_pagamento_editText_hint_parcelas">Parcelas</string>

</resources>
