<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="eduardocruzproductions.myclothesstock.CadCliente"
    tools:showIn="@layout/activity_cad_cliente"
    android:background="@color/background_color">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:background="@android:color/white"
                android:paddingBottom="3dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:singleLine="true"
                android:textColor="@color/editText_text"
                android:textColorHint="@color/editText_hint"
                android:textSize="32dp"
                android:hint="@string/cadCliente_editText_hint_nome"/>

            <EditText
                android:id="@+id/editText2"
                android:ems="10"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:background="@android:color/white"
                android:paddingBottom="3dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:singleLine="true"
                android:textColor="@color/editText_text"
                android:textColorHint="@color/editText_hint"
                android:textSize="32dp"
                android:hint="@string/cadCliente_editText_hint_cpf"
                android:maxLength="11"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cadCliente_textView_numerosApenas"
                android:gravity="right"
                android:layout_marginRight="20px"
                android:layout_marginLeft="20px"
                android:layout_marginTop="10px"
                android:textStyle="italic"
                android:textColor="@color/colorAccent"/>

            <EditText
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:background="@android:color/white"
                android:paddingBottom="3dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:singleLine="true"
                android:textColor="@color/editText_text"
                android:textColorHint="@color/editText_hint"
                android:textSize="32dp"
                android:hint="@string/cadCliente_editText_hint_data"
                android:maxLength="10"/>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cadCliente_textView_exemploData"
                android:gravity="right"
                android:layout_marginRight="20px"
                android:layout_marginLeft="20px"
                android:layout_marginTop="10px"
                android:textStyle="italic"
                android:textColor="@color/colorAccent" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:background="@android:color/white"
                android:paddingBottom="3dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:singleLine="true"
                android:textColor="@color/editText_text"
                android:textColorHint="@color/editText_hint"
                android:textSize="32dp"
                android:hint="@string/cadCliente_editText_hint_telefone"
                android:maxLength="13"/>

            <EditText
                android:id="@+id/editText5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:background="@android:color/white"
                android:paddingBottom="3dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:singleLine="true"
                android:textColor="@color/editText_text"
                android:textColorHint="@color/editText_hint"
                android:textSize="32dp"
                android:hint="@string/cadCliente_editText_hint_email"/>

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cadCliente_btn_text_concluir"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />


        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
