<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="eduardocruzproductions.myclothesstock.CadProduto"
    tools:showIn="@layout/activity_cad_produto"
    android:background="@color/background_color"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/cadProduto_editText_referencia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:background="@android:color/white"
                android:ems="10"
                android:hint="@string/cadProduto_editText_hint_referencia"
                android:inputType="textCapCharacters"
                android:paddingBottom="3dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:singleLine="true"
                android:textColor="@color/editText_text"
                android:textColorHint="@color/editText_hint"
                android:textSize="32dp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="16dp" />

            <EditText
                android:id="@+id/cadProduto_editText_marca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:background="@android:color/white"
                android:ems="10"
                android:hint="@string/cadProduto_editText_hint_marca"
                android:inputType="textPersonName"
                android:paddingBottom="3dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:selectAllOnFocus="false"
                android:singleLine="true"
                android:textColor="@color/editText_text"
                android:textColorHint="@color/editText_hint"
                android:textSize="32dp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="16dp" />

            <EditText
                android:id="@+id/cadProduto_editText_descricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:background="@android:color/white"
                android:ems="10"
                android:hint="@string/cadProduto_editText_hint_descricao"
                android:inputType="textMultiLine"
                android:paddingBottom="3dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:singleLine="false"
                android:textColor="@color/editText_text"
                android:textColorHint="@color/editText_hint"
                android:textSize="32dp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="16dp" />

            <EditText
                android:id="@+id/cadProduto_editText_precoCusto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:background="@android:color/white"
                android:ems="10"
                android:hint="@string/cadProduto_editText_hint_precoCusto"
                android:inputType="numberDecimal"
                android:paddingBottom="3dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:singleLine="true"
                android:textColor="@color/editText_text"
                android:textColorHint="@color/editText_hint"
                android:textSize="32dp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="16dp" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <EditText
                    android:id="@+id/cadProduto_editText_precoVenda"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@android:color/white"
                    android:ems="10"
                    android:hint="@string/cadProduto_editText_hint_precoVenda"
                    android:inputType="numberDecimal"
                    android:paddingBottom="3dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="5dp"
                    android:singleLine="true"
                    android:textColor="@color/editText_text"
                    android:textColorHint="@color/editText_hint"
                    android:textSize="32dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/button7"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/button7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/btn_background"
                    android:text="@string/cadProduto_btn_text_gerar"
                    android:textColor="@color/btn_text"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:onClick="generateVenda"/>

            </android.support.constraint.ConstraintLayout>

            <Button
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/btn_background"
                android:onClick="showGradeIncluder"
                android:text="@string/cadProduto_btn_text_grade"
                android:textColor="@color/btn_text" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cadProduto_textView_totalItens"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="0dp"
                    android:layout_marginLeft="0dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:textSize="20dp"
                    android:textColor="@color/colorPrimary"/>

                <TextView
                    android:id="@+id/cadProduto_textView_qtItens"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="0dp"
                    android:text="0"
                    android:textColor="@color/editText_text"
                    android:textSize="20dp"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toRightOf="@+id/textView2"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>

            <Button
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cadProduto_btn_text_concluir"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>


        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
