<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="eduardocruzproductions.myclothesstock.InsertGrade"
    tools:showIn="@layout/activity_insert_grade"
    android:background="@color/background_color">

    <EditText
        android:id="@+id/insertGrade_editText_tamanho"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@android:color/white"
        android:ems="10"
        android:inputType="textCapCharacters"
        android:paddingBottom="3dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:layout_marginTop="16dp"
        android:singleLine="true"
        android:textColor="@color/editText_text"
        android:textColorHint="@color/editText_hint"
        android:hint="@string/insertGrade_editText_hint_tamanho"
        android:textSize="32dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/insertGrade_editText_quantidade"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/insertGrade_editText_tamanho"
        app:layout_constraintHorizontal_bias="0.503"
        android:background="@android:color/white"
        android:ems="10"
        android:inputType="number"
        android:paddingBottom="3dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:singleLine="true"
        android:textColor="@color/editText_text"
        android:textColorHint="@color/editText_hint"
        android:hint="@string/insertGrade_editText_hint_quantidade"
        android:textSize="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <Button
        android:id="@+id/insertGrade_button_incluir"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/insertGrade_btn_text_incluir"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/insertGrade_editText_quantidade"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="add"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/insertGrade_listView"
        android:text="@string/insertGrade_textView_pressRemove"
        app:layout_constraintVertical_bias="0.666"
        android:textStyle="italic"
        android:textColor="@color/colorAccent"/>

    <ListView
        android:id="@+id/insertGrade_listView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/insertGrade_button_incluir"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="24dp" />


</android.support.constraint.ConstraintLayout>
