<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/cadProduto_alert_gerador_title"
        android:layout_marginTop="20dp"
        android:textSize="25dp"
        android:textColor="@color/editText_text"
        android:textStyle="bold"/>


    <EditText
        android:id="@+id/cadProduto_editText_referencia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/venda_produto_alert_defineAtributs_radioGroup"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:background="@android:color/white"
        android:ems="10"
        android:inputType="numberDecimal"
        android:paddingBottom="3dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:singleLine="true"
        android:textColor="@color/editText_text"
        android:textColorHint="@color/editText_hint"
        android:textSize="32dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/linhadivisora"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/cadProduto_editText_referencia"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/venda_produto_alert_defineAtributs_radioGroup"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="15dp">

        <RadioButton
            android:id="@+id/venda_produto_alert_defineAtributs_radioButton_valor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView"
            android:layout_weight="1"
            android:buttonTint="@color/editText_text"
            android:checked="true"
            android:text="@string/cadProduto_alert_gerador_radioOpValor"
            android:textColor="@color/editText_text"
            android:textSize="18dp" />

        <RadioButton
            android:id="@+id/cadProduto_alert_gerador_radioButton_porcent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/venda_produto_alert_defineAtributs_radioButton_valor"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:buttonTint="@color/editText_text"
            android:text="@string/cadProduto_alert_gerador_radioOpPorcent"
            android:textColor="@color/editText_text"
            android:textSize="18dp" />

    </RadioGroup>


</RelativeLayout>
